# htmx_blog_post

./: .gitignore  README.md
trip_builder/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
trip_builder/accounts/migrations/: 0001_initial.py
trip_builder/config/: settings.py  urls.py
trip_builder/templates/: base.html  index.html  index_reset.html  itinerary_choice.html  new_vacation.html  vacation_list.html
trip_builder/templates/registration/: login.html
trip_builder/trip_builder/: admin.py  apps.py  models.py  urls.py  views.py
trip_builder/trip_builder/migrations/: 0001_initial.py  0002_vacation.py
